# dao-ai

./: .gitignore  README.md  databricks.yaml.template  environment.yaml  pyproject.toml  requirements.txt
.github/workflows/: publish-to-pypi.yaml
bundles/shared_execution/: app.yaml  dao_ai-0.1.40-py3-none-any.whl  databricks.yaml
config/examples/: README.md
config/examples/02_mcp/: filtered_mcp.yaml  managed_mcp.yaml  slack_integration.yaml
config/examples/03_reranking/: README.md  instruction_aware_reranking.yaml  vector_search_with_reranking.yaml
config/examples/04_genie/: README.md  cache_threshold_optimization.yaml  genie_basic.yaml  genie_context_aware_cache.yaml  genie_in_memory_context_aware_cache.yaml  genie_in_memory_semantic_cache.yaml  genie_lru_cache.yaml  genie_semantic_cache.yaml  genie_with_conversation_id.yaml
config/examples/05_memory/: README.md  conversation_summarization.yaml
config/examples/06_on_behalf_of_user/: obo_basic.yaml
config/examples/07_human_in_the_loop/: README.md  human_in_the_loop.yaml
config/examples/08_guardrails/: README.md  guardrails_basic.yaml  guardrails_scorers.yaml
config/examples/10_agent_integrations/: agent_bricks.yaml  kasal.yaml
config/examples/11_prompt_engineering/: prompt_optimization.yaml  prompt_registry.yaml
config/examples/12_middleware/: README.md  combined_middleware.yaml  context_management.yaml  custom_field_validation.yaml  deepagents_middleware.yaml  limit_middleware.yaml  logging_middleware.yaml  pii_middleware.yaml  retry_middleware.yaml
config/examples/13_orchestration/: README.md  deterministic_handoff_pattern.yaml
config/examples/14_basic_tools/: sql_tool_example.yaml
config/examples/15_complete_applications/: README.md  brick_store.yaml  deep_research.yaml  executive_assistant.yaml  genie_vector_search_hybrid.yaml  hardware_store.yaml  hardware_store_instructed.yaml  hardware_store_lakebase.yaml  hardware_store_swarm.yaml  quick_serve_restaurant.yaml  reservations_system.yaml  sporting_goods_store.yaml
config/examples/16_instructed_retriever/: README.md  full_pipeline.yaml  instructed_retriever.yaml
config/examples/17_parallel_tools/: README.md  parallel_tool_calls.yaml
config/examples/18_visualization/: README.md  vega_lite_visualization.yaml
data/sporting_goods_store/: dim_stores.sql  dim_stores_data.sql  inventory.sql  inventory_data.sql  pricing_history.sql  pricing_history_data.sql  product_data.sql  products.sql  purchase_orders.sql  purchase_orders_data.sql  sales_orders.sql  sales_orders_data.sql
docs/: architecture.md  configuration-reference.md  contributing.md  examples.md  faq.md  genie_context_aware_cache_prompt_history.md  genie_semantic_cache_prompt_history.md  key-capabilities.md  why-dao.md
functions/quick_serve_restaurant/: match_item_by_description_and_price.sql
functions/sporting_goods_store/: find_inventory_by_sku.sql  find_inventory_by_upc.sql  find_product_by_sku.sql  find_product_by_upc.sql  find_store_inventory_by_sku.sql  find_store_inventory_by_upc.sql
notebooks/: 05_deploy_agent.py  06_generate_evaluation_data.py  07_run_evaluation.py  09_evaluate_inferences.py  11_optimize_cache_thresholds.py  11_optimize_context_aware_genie_cache.py  12_genie_cache_service.py  13_enable_monitoring.py  99_scratchpad.py
schemas/: model_config_schema.json
scripts/: create_release.sh
src/dao_ai/: cli.py  config.py  evaluation.py  guardrails_hub.py  logging.py  models.py  nodes.py  state.py  utils.py
src/dao_ai/apps/: handlers.py  model_serving.py  resources.py  shared_handlers.py  shared_server.py
src/dao_ai/apps/chat_ui/: index.html  package.json  vite.config.ts
src/dao_ai/genie/: __init__.py  core.py
src/dao_ai/genie/cache/: __init__.py  (+6 more)
src/dao_ai/memory/: __init__.py  core.py  databricks.py  extraction.py  postgres.py  schemas.py
src/dao_ai/middleware/: __init__.py  _backends.py  _prompt_utils.py  assertions.py  filesystem.py  guardrails.py  memory_agents.py  memory_context.py  skills.py  subagent.py  summarization.py  todo.py  tool_call_id_sanitizer.py  tool_call_observability.py
src/dao_ai/orchestration/: core.py  supervisor.py  swarm.py
src/dao_ai/prompts/: __init__.py  instructed_retriever_decomposition.yaml  instruction_reranker.yaml
src/dao_ai/providers/: databricks.py
src/dao_ai/tools/: __init__.py  app_info.py  genie.py  instructed_retriever.py  instruction_reranker.py  mcp.py  memory.py  router.py  sql.py  unity_catalog.py  vector_search.py  verifier.py  visualization.py
tests/: conftest.py
tests/config/: test_model_config.yaml
tests/dao_ai/: test_app_info_tool.py  test_cache_fallback.py  test_config.py  test_content_blocks.py  test_context_aware_cache.py  test_databricks.py  test_deepagents_middleware.py  test_deterministic_handoffs.py  test_embedding_dims_discovery.py  test_evaluation.py  test_genie.py  test_genie_databricks_integration.py  test_genie_feedback.py  test_genie_room_model.py  test_guardrail_retry.py  test_guardrails_integration.py  test_hitl_responses_agent.py  test_in_memory_context_aware_cache.py  test_in_memory_semantic_cache.py  test_inline_function.py  test_instructed_retrieval_integration.py  test_instructed_retriever.py  test_instruction_reranker.py  test_instruction_reranker_integration.py  test_interrupt_type.py  test_memory_tools.py  test_models.py  test_prompt_optimizations.py  test_prompts.py  test_reranking.py  test_responses_agent_structured_output_unit.py  test_router.py  test_semantic_cache_context.py  test_state.py  test_summarization_inference.py  test_unity_catalog.py  test_verifier.py  test_visualization.py  test_visualization_integration.py  test_volume_backend.py  (+1 more)
tests/dao_ai/genie/: cleanup_test_tables.py  test_cache_optimization.py  test_from_space_integration.py  test_prompt_history.py  test_semantic_search_diagnostic.py  test_similarity_formula_diagnostic.py
tests/dao_ai/middleware/: test_tool_call_observability.py
(+15 files in other folders)
