[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dao-ai"
version = "0.1.19"
description = "DAO AI: A modular, multi-agent orchestration framework for complex AI workflows. Supports agent handoff, tool integration, and dynamic configuration via YAML."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Nate Fleming", email = "nate.fleming@databricks.com" },
    { name = "Nate Fleming", email = "nate.fleming@gmail.com" },
]
maintainers = [
    { name = "Nate Fleming", email = "nate.fleming@databricks.com" },
]
keywords = [
    "ai",
    "agents", 
    "multi-agent",
    "orchestration",
    "langgraph",
    "langchain",
    "databricks",
    "llm",
    "vector-search",
    "workflow"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
]
dependencies = [
    "databricks-agents>=1.9.0",
    "databricks-langchain[memory]>=0.13.0",
    "databricks-mcp>=0.5.0",
    "databricks-sdk[openai]>=0.77.0",
    "ddgs>=9.10.0",
    "dspy>=2.6.27",
    "flashrank>=0.2.10",
    "gepa>=0.0.22",
    "grandalf>=0.8",
    "langchain>=1.2.0",
    "langchain-community>=0.3.26",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-tavily>=0.2.15",
    "langgraph-checkpoint-postgres>=3.0.2",
    "langgraph>=1.0.5",
    "langmem>=0.0.30",
    "loguru>=0.7.3",
    "mcp>=1.24.0",
    "mlflow[databricks]>=3.8.1",
    "nest-asyncio>=1.6.0",
    "openevals>=0.1.3",
    "openpyxl>=3.1.5",
    "psycopg[binary,pool]>=3.3.2",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.2",
    "rich>=14.2.0",
    "scipy>=1.14.0",
    "sqlparse>=0.5.4",
    "tomli>=2.3.0",
    "unitycatalog-ai[databricks]>=0.3.2",
]

[project.scripts]
dao-ai = "dao_ai.cli:main"

[project.urls]
Homepage = "https://github.com/natefleming/dao-ai"
Documentation = "https://natefleming.github.io/dao-ai"
Repository = "https://github.com/natefleming/dao-ai"
Issues = "https://github.com/natefleming/dao-ai/issues"
Changelog = "https://github.com/natefleming/dao-ai/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.9",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "mkdocstrings[python]>=1.0.0",
]
test = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "pytest-rerunfailures>=15.0",
    "pytest-xdist>=3.6.1",
]
databricks = [
    "databricks-vectorsearch>=0.63",
    "pyspark>=3.5.0",
    "databricks-connect>=16.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.9",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1", 
    "mkdocstrings[python]>=1.0.0",
]
test = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "pytest-rerunfailures>=15.0",
    "pytest-xdist>=3.6.1",
]
databricks = [
    "databricks-vectorsearch>=0.63",
    "pyspark>=3.5.0",
    "databricks-connect>=16.0.0",
]
all = [
    { include-group = "dev" },
    { include-group = "docs" },
    { include-group = "test" },
]

[tool.hatch.build.targets.wheel]
packages = ["src/dao_ai"]
sources = ["src"]
exclude = [
    "data",
    "docs", 
    "examples",
    "functions",
    "notebooks",
    "schemas",
    "config",
    "databricks.yaml",
    "tests",
    "uv.lock",
    "Makefile",
]

[tool.hatch.build.targets.sdist]
# For source distribution, include more files that developers might need
exclude = [
    ".databricks",
    ".vscode", 
    ".pytest_cache",
    ".ruff_cache",
    ".env",
    "uv.lock",
]

[tool.pytest.ini_options]
# Pytest configuration
minversion = "9.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",                          # Verbose output
    "--strict-markers",            # Enforce marker registration
    "--tb=short",                  # Shorter traceback format
    "--disable-warnings",          # Disable warnings in output
    # Uncomment to enable parallel execution by default:
    # "-n", "auto",                # Run tests in parallel using all available CPUs
]
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (may require external services)",
    "slow: Slow tests that take more than a few seconds",
    "flaky: Tests that may fail intermittently",
]

[tool.ruff]
# Enable the Ruff formatter
target-version = "py311"  # Minimum supported Python version
line-length = 88  # Same as Black's default
indent-width = 4

# Add the formatter section
[tool.ruff.format]
quote-style = "double"  # Black uses double quotes
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# Set directories to include/exclude
[tool.ruff.lint]
select = ["E", "F", "I"]  # You can add more linting rules here
ignore = []
fixable = ["ALL"]
unfixable = []

# Exclude files/directories
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
